--- a/GoAPI/.env
+++ b/GoAPI/.env
@@ -1,2 +1,7 @@
 Gemini_API_KEY="AIzaSyC1-rFXIenOZEa-dOChm3Ua4sXnob-3LN4"
-Gemini_API_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent"
+Gemini_API_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+
+Python_API_PORT=" http://127.0.0.1:5000"
+
+//GoAPI port is 8080
+
