--- a/GoAPI/.env
+++ b/GoAPI/.env
@@ -1,7 +1,7 @@
 Gemini_API_KEY="AIzaSyC1-rFXIenOZEa-dOChm3Ua4sXnob-3LN4"
 Gemini_API_URL="https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
 
-Python_API_PORT=" http://127.0.0.1:5000"
+Python_API_PORT_FOR_ANALIZE="http://127.0.0.1:5000"
+Python_API_PORT_FOR_CREATE="http://127.0.0.1:5001"
 
-//GoAPI port is 8080
-
+GoAPI_PORT="8080"
