--- a/app-front/package.json
+++ b/app-front/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+     "dev": "node server.js",
+     "build": "next build",
+     "start": "NODE_ENV=production node server.js",
+     "lint": "next lint"
+   },
+   
   "dependencies": {
     "@types/ws": "^8.18.1",
     "next": "15.3.1",
